--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: auto;
 
   margin: 60px auto;
   max-width: 500px;
@@ -22,10 +23,46 @@ body {
   border-radius: 10px;
 }
 
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+
 h1 {
   margin: 0 0 50px;
 }
 
 .lead {
   font-size: 1.35rem;
+}
+
+label {
+  display: inline-block;
+  margin-bottom: 8px;
+}
+
+label > span {
+  display: inline-block;
+  width: 11rem;
+  text-align: left;
+}
+
+input[type=range] {
+  width: 75%;
+  margin-bottom: 15px;
+}
+
+input[type=number] {
+  padding: 2px;
+}
+
+button[type=submit] {
+  padding: 10px 39px;
+  border: 0;
+  border-radius: 5px;
+  font-size: 1rem;
+  background-color: #f28a1b;
+  color: #fff;
 }
