--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ label {
 
 label > span {
   display: inline-block;
-  width: 11rem;
+  width: 9rem;
   text-align: left;
 }
 
@@ -56,6 +56,7 @@ input[type=range] {
 
 input[type=number] {
   padding: 2px;
+  width: 9rem;
 }
 
 button[type=submit] {
@@ -65,4 +66,5 @@ button[type=submit] {
   font-size: 1rem;
   background-color: #f28a1b;
   color: #fff;
+  cursor: pointer;
 }
